# juanita-mealie

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/juanita/: __init__.py  __main__.py  cli.py  web.py
src/juanita/templates/: index.html
src/youtube_to_mealie/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_config.py  test_extract.py  test_ingredients.py  test_push.py  test_sources.py  test_web.py
