[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-to-mealie"
version = "0.1.0"
description = "Turn YouTube cooking videos into Mealie recipes using yt-dlp and Claude."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "gilgamezh" }]
keywords = ["mealie", "youtube", "yt-dlp", "recipes", "claude", "anthropic", "cooking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.69",
    "pydantic>=2",
    "requests>=2.31",
    "yt-dlp",
]

[project.urls]
Homepage = "https://github.com/gilgamezh/youtube-to-mealie"
Repository = "https://github.com/gilgamezh/youtube-to-mealie"
Issues = "https://github.com/gilgamezh/youtube-to-mealie/issues"

[project.scripts]
youtube-to-mealie = "youtube_to_mealie.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_to_mealie"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
