[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juanita-mealie"
version = "0.2.0"
description = "Juanita — import recipes into Mealie from many sources (YouTube, text files, and more) using Claude."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "gilgamezh" }]
keywords = ["mealie", "recipes", "youtube", "yt-dlp", "claude", "anthropic", "cooking", "import"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.69",
    "pydantic>=2",
    "requests>=2.31",
    "yt-dlp",
]

[project.urls]
Homepage = "https://github.com/gilgamezh/juanita-mealie"
Repository = "https://github.com/gilgamezh/juanita-mealie"
Issues = "https://github.com/gilgamezh/juanita-mealie/issues"

[project.scripts]
juanita = "juanita.cli:main"
juanita-web = "juanita.web:main"

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "httpx>=0.27",
    "juanita-mealie[web]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/juanita"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
